
Denora v1.5.0-git
-------------

Additions
13/01/13 Added support for ircu's channel mode +R (was missing)
12/07/27 Added proper mysql backtrace debugging (not for windows)
12/07/26 Added MAX_ADMINS MAX_UIDS MAX_USERS to denora.h to easily update limits
12/07/25 Added md5 support to hash passwords
12/07/17 Added the sql needed for shadowircd protocol
12/07/15 Added shadowircd protocol supplied by Joah
12/07/14 Moved modules from separate modules git into this one and fixed their warnings
12/07/09 Don't use adns if getaddrinfo is available (adns has no ipv6 support)
12/06/12 Added channelmode +R to scarynet
12/04/20 Added country lookup for servers to support #46@magirc
11/04/22 r432 Added parameter support for !stats and !gstats
11/02/12 r423 Added support for accounts on Charybdis at burst
11/02/12 r421 Added support for accounts on Charybdis
11/02/11 r416 Added support for ircd-rizon

Changes
13/10/17 Removed USE_RDB define from config, this was legacy Anope code for when rdb was an option.
13/05/31 Improved handling of KILL messages on InspIRCd
13/05/16 Do not free unallocated memory in InspIRCd protocol
12/10/04 Cleanup and hopefully less leaks etc
12/08/23 db_getserver() now escapes servername itself where needed
12/08/05 Threading is now disabled by default (it's only used for mysql and the current implementation
	 has serious issues)
12/07/26 Set country to server's country if connection is localhost
12/07/26 Use geoip's nice ntop/pton wrapper and depend on the existance of the functions, not the OS
12/07/26 More cleanup and rewrites in src/users.c src/admin.c src/bans.c src/base64.c src/GeoIP.c
         src/ChanBanMode.c src/ChanMode.c src/channels.c
12/07/25 More cleanup and rewrite
12/07/24 Lots of cleanup in src/db.c
12/07/23 Rewrote db file handling a little
12/07/23 Automode handled in denora_cmd_join now, removed from other obsolete places (fixed #1433)
12/07/23 Updated sql specific code, more preparations for threadin