@@ -107,6 +107,7 @@ AC_CHECK_HEADER(netdb.h,AC_DEFINE(HAVE_NETDBH,1,""))
 AC_CHECK_HEADER(malloc.h,AC_DEFINE(HAVE_MALLOC_H,1,""))
 AC_CHECK_HEADER(signal.h,AC_DEFINE(HAVE_SIGNAL_H,1,""))
 AC_CHECK_HEADER(poll.h,AC_DEFINE(HAVE_POLL_H,1,""))
+AC_CHECK_HEADER(regex.h,AC_DEFINE(HAVE_REGEX_H,1,""))
 AC_CHECK_HEADER(perl.h,AC_DEFINE(HAVE_PERL_H,1,""))
 
 AC_C_INLINE
